# overperforming-58-energy-stocks

./: .gitignore  LICENSE  README.md  dataframe.csv  eda.ipynb  pyproject.toml  requirements.txt
app/: home.py  home_copy.py
app/.streamlit/: config.toml
app/pages/: A_Stocks analysis.py  B_Exploratory_analysis_on_tweets.py  C_Sentimenal_analysis.py  D_Investment_recommendation.py  NLP_impact_in_stocks.py  NLP_model.py  Stocks.py  beta.py
data/: stocks_daily_data.xlsx  stocks_data.csv  stocks_data.xlsx  webscraped_BP_PLC.csv  webscraped_BP_PLC1.csv  webscraped_FMC_CORP.csv
data/data_model/: join_stocks.ipynb  results.csv  stocks_data_new.xlsx  todo.csv  webscraped_ALTAGAS_LTD.csv  webscraped_BHP_GROUP.csv  webscraped_BP_PLC.csv  webscraped_FMC_CORP.csv  webscraped_INTERNATIONAL_PAPER_CO.csv  webscraped_S&P_500_ENERGY_INDEX.csv  webscraped_STORA_ENSO.csv  webscraped_TOTALENERGIES_SE.csv  webscraped_WEYERHAEUSER_CO.csv  webscraped_WILMAR_INTERNATIONAL_LTD.csv
data/new_webscrapping/: webscraped_bp_plc.csv
data/temp/: concatenating.ipynb
data/webscraped_data/: webscraped_ALTAGAS_LTD.csv  webscraped_ANGLO_AMERICAN_PLC.csv  webscraped_ARCHER-DANIELS-MIDLAND_CO.csv  webscraped_BHP_GROUP.csv  webscraped_BP_PLC.csv  webscraped_CENOVUS_ENERGY_INC.csv  webscraped_CONOCOPHILLIPS1.csv  (+33 more)
data_model/: webscraped_WEYERHAEUSER_CO.csv
model/: data.csv  model.ipynb  model.py  output.xlsx  score_investment.py
preprocessing/: preprocessing.py  requirements.txt  spark_preprocessing.ipynb
webscrapping/: lab.ipynb  parameters.py  reddit_scrapper.py  twitter_scrapper.py  x.py
(+44 files in other folders)
