[tool.poetry]
name = "overperforming-58-energy-stocks"
version = "0.1.0"
description = "Computing impact of tweets on energy stocks"
authors = ["JAGS <78938133+JoseAngelGarciaSanchez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
streamlit = "^1.30.0"
scikit-learn = "^1.4.0"
ipykernel = "^6.29.0"
openpyxl = "^3.1.2"
plotly = "^5.18.0"
wordcloud = "^1.9.3"
nltk = "^3.8.1"
seaborn = "^0.13.2"
transformers = "^4.37.1"
selenium = "^4.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
